// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Contract creation > Contract creation from a factory contract > should trace contract creation and factory state changes 1`] = `
{
  "0x0000000000000000000000000000000000000000": {
    "balance": {
      "current": 1000000000000000000000n,
      "modified": false,
    },
    "code": {
      "current": "0x",
      "modified": false,
    },
    "codeHash": {
      "current": "0x0000000000000000000000000000000000000000000000000000000000000000",
      "modified": false,
    },
    "codeSize": {
      "modified": false,
    },
    "isContract": {
      "current": true,
      "modified": false,
    },
    "isEmpty": {
      "current": false,
      "modified": false,
    },
    "nonce": {
      "current": 0n,
      "modified": false,
    },
    "storage": {},
    "storageRoot": {
      "current": "0x0000000000000000000000000000000000000000000000000000000000000000",
      "modified": false,
    },
    "version": {
      "current": 0,
      "modified": false,
    },
  },
  "0x0000000000000000000000000000000000000001": {
    "balance": {
      "current": 10000000000000000000n,
      "modified": true,
      "next": 9999999999998736465n,
    },
    "code": {
      "current": "0x",
      "modified": false,
    },
    "codeHash": {
      "current": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "modified": false,
    },
    "codeSize": {
      "current": 0,
      "modified": false,
    },
    "isContract": {
      "current": false,
      "modified": false,
    },
    "isEmpty": {
      "current": false,
      "modified": false,
    },
    "nonce": {
      "current": 0n,
      "modified": true,
      "next": 1n,
    },
    "storage": {},
    "storageRoot": {
      "current": "0x56e81f171bcc55a6ff8345e692c0f86e5b48e01b996cadc001622fb5e363b421",
      "modified": false,
    },
    "version": {
      "current": 0,
      "modified": false,
    },
  },
  "0x466163746f727900000000000000000000000000": {
    "balance": {
      "current": 0n,
      "modified": false,
    },
    "code": {
      "current": "0x608060405234801561000f575f5ffd5b5060043610610034575f3560e01c80639db8d7d514610038578063b32d4d4514610068575b5f5ffd5b610052600480360381019061004d91906101f1565b610086565b60405161005f919061025b565b60405180910390f35b610070610123565b60405161007d919061032b565b60405180910390f35b5f5f82604051610095906101ad565b61009f919061035a565b604051809103905ff0801580156100b8573d5f5f3e3d5ffd5b5090505f81908060018154018082558091505060019003905f5260205f20015f9091909190916101000a81548173ffffffffffffffffffffffffffffffffffffffff021916908373ffffffffffffffffffffffffffffffffffffffff16021790555080915050919050565b60605f8054806020026020016040519081016040528092919081815260200182805480156101a357602002820191905f5260205f20905b815f9054906101000a900473ffffffffffffffffffffffffffffffffffffffff1673ffffffffffffffffffffffffffffffffffffffff168152602001906001019080831161015a575b5050505050905090565b6101c78061037483390190565b5f5ffd5b5f819050919050565b6101d0816101be565b81146101da575f5ffd5b50565b5f813590506101eb816101c7565b92915050565b5f60208284031215610206576102056101ba565b5b5f610213848285016101dd565b91505092915050565b5f73ffffffffffffffffffffffffffffffffffffffff82169050919050565b5f6102458261021c565b9050919050565b6102558161023b565b82525050565b5f60208201905061026e5f83018461024c565b92915050565b5f81519050919050565b5f82825260208201905092915050565b5f819050602082019050919050565b6102a68161023b565b82525050565b5f6102b7838361029d565b60208301905092915050565b5f602082019050919050565b5f6102d982610274565b6102e3818561027e565b93506102ee8361028e565b805f5b8381101561031e57815161030588826102ac565b9750610310836102c3565b9250506001810190506102f1565b5085935050505092915050565b5f6020820190508181035f83015261034381846102cf565b905092915050565b610354816101be565b82525050565b5f60208201905061036d5f83018461034b565b9291505056fe6080604052348015600e575f5ffd5b506040516101c73803806101c78339818101604052810190602e9190606b565b805f81905550506091565b5f5ffd5b5f819050919050565b604d81603d565b81146056575f5ffd5b50565b5f815190506065816046565b92915050565b5f60208284031215607d57607c6039565b5b5f6088848285016059565b91505092915050565b6101298061009e5f395ff3fe6080604052348015600e575f5ffd5b50600436106030575f3560e01c8063209652551460345780635524107714604e575b5f5ffd5b603a6066565b60405160459190608d565b60405180910390f35b606460048036038101906060919060cd565b606e565b005b5f5f54905090565b805f8190555050565b5f819050919050565b6087816077565b82525050565b5f602082019050609e5f8301846080565b92915050565b5f5ffd5b60af816077565b811460b8575f5ffd5b50565b5f8135905060c78160a8565b92915050565b5f6020828403121560df5760de60a4565b5b5f60ea8482850160bb565b9150509291505056fea26469706673582212209547900619ec1716728eaf2753fab442fe708ca3528bbe22d58874ef6e0f611c64736f6c634300081c0033a2646970667358221220bd4ac2b592b5f74b512496ebf387cf13aaf0451c24764eda8713bcb2eff973c964736f6c634300081c0033",
      "modified": false,
    },
    "codeHash": {
      "current": "0x5b7735a30fb68b51af3f5090bb26c850ecf8770259089e65646008abfb733838",
      "modified": false,
    },
    "codeSize": {
      "modified": false,
    },
    "isContract": {
      "current": true,
      "modified": false,
    },
    "isEmpty": {
      "current": false,
      "modified": false,
    },
    "nonce": {
      "current": 0n,
      "modified": true,
      "next": 1n,
    },
    "storage": {
      "createdContracts": {
        "kind": "dynamic_array",
        "name": "createdContracts",
        "trace": [
          {
            "current": {
              "decoded": 0n,
              "hex": "0x00",
            },
            "fullExpression": "createdContracts._length",
            "modified": true,
            "next": {
              "decoded": 1n,
              "hex": "0x01",
            },
            "path": [
              {
                "kind": "array_length",
                "name": "_length",
              },
            ],
            "slots": [
              "0x0000000000000000000000000000000000000000000000000000000000000000",
            ],
          },
          {
            "current": {
              "decoded": "0x0000000000000000000000000000000000000000",
              "hex": "0x00",
            },
            "fullExpression": "createdContracts[0]",
            "modified": true,
            "next": {
              "decoded": "0x89b0d1b5E6b53A1bA16cF7b6Ad34292943671EaE",
              "hex": "0x89b0d1b5e6b53a1ba16cf7b6ad34292943671eae",
            },
            "path": [
              {
                "index": 0n,
                "kind": "array_index",
              },
            ],
            "slots": [
              "0x290decd9548b62a8d60345a988386fc84ba6bc95484008f6362f93160ef3e563",
            ],
          },
        ],
        "type": "address[]",
      },
    },
    "storageRoot": {
      "current": "0x56e81f171bcc55a6ff8345e692c0f86e5b48e01b996cadc001622fb5e363b421",
      "modified": false,
    },
    "version": {
      "current": 0,
      "modified": false,
    },
  },
  "0x89b0d1b5e6b53a1ba16cf7b6ad34292943671eae": {
    "storage": {
      "slot_0x0000000000000000000000000000000000000000000000000000000000000000": {
        "name": "slot_0x0000000000000000000000000000000000000000000000000000000000000000",
        "trace": [
          {
            "fullExpression": "slot_0x0000000000000000000000000000000000000000000000000000000000000000",
            "modified": false,
            "next": {
              "hex": "0x7b",
            },
            "note": "Could not label this slot access because no layout was found.",
            "path": [],
            "slots": [
              "0x0000000000000000000000000000000000000000000000000000000000000000",
            ],
          },
        ],
      },
    },
  },
}
`;

exports[`Contract creation > Contract creation from a factory contract > should trace interactions with a created contract 1`] = `
{
  "0x0000000000000000000000000000000000000000": {
    "balance": {
      "current": 1000000000000000000000n,
      "modified": false,
    },
    "code": {
      "current": "0x",
      "modified": false,
    },
    "codeHash": {
      "current": "0x0000000000000000000000000000000000000000000000000000000000000000",
      "modified": false,
    },
    "codeSize": {
      "modified": false,
    },
    "isContract": {
      "current": true,
      "modified": false,
    },
    "isEmpty": {
      "current": false,
      "modified": false,
    },
    "nonce": {
      "current": 0n,
      "modified": false,
    },
    "storage": {},
    "storageRoot": {
      "current": "0x0000000000000000000000000000000000000000000000000000000000000000",
      "modified": false,
    },
    "version": {
      "current": 0,
      "modified": false,
    },
  },
  "0x0000000000000000000000000000000000000001": {
    "balance": {
      "current": 9999999999998736465n,
      "modified": true,
      "next": 9999999999998550055n,
    },
    "code": {
      "current": "0x",
      "modified": false,
    },
    "codeHash": {
      "current": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "modified": false,
    },
    "codeSize": {
      "current": 0,
      "modified": false,
    },
    "isContract": {
      "current": false,
      "modified": false,
    },
    "isEmpty": {
      "current": false,
      "modified": false,
    },
    "nonce": {
      "current": 1n,
      "modified": true,
      "next": 2n,
    },
    "storage": {},
    "storageRoot": {
      "current": "0x56e81f171bcc55a6ff8345e692c0f86e5b48e01b996cadc001622fb5e363b421",
      "modified": false,
    },
    "version": {
      "current": 0,
      "modified": false,
    },
  },
  "0x89b0d1b5e6b53a1ba16cf7b6ad34292943671eae": {
    "balance": {
      "current": 0n,
      "modified": false,
    },
    "code": {
      "current": "0x6080604052348015600e575f5ffd5b50600436106030575f3560e01c8063209652551460345780635524107714604e575b5f5ffd5b603a6066565b60405160459190608d565b60405180910390f35b606460048036038101906060919060cd565b606e565b005b5f5f54905090565b805f8190555050565b5f819050919050565b6087816077565b82525050565b5f602082019050609e5f8301846080565b92915050565b5f5ffd5b60af816077565b811460b8575f5ffd5b50565b5f8135905060c78160a8565b92915050565b5f6020828403121560df5760de60a4565b5b5f60ea8482850160bb565b9150509291505056fea26469706673582212209547900619ec1716728eaf2753fab442fe708ca3528bbe22d58874ef6e0f611c64736f6c634300081c0033",
      "modified": false,
    },
    "codeHash": {
      "current": "0x54f15c2d7f40acccc0c76955ae69a95f623cee758dff789b5f94bb1a495b7d89",
      "modified": false,
    },
    "codeSize": {
      "modified": false,
    },
    "isContract": {
      "current": true,
      "modified": false,
    },
    "isEmpty": {
      "current": false,
      "modified": false,
    },
    "nonce": {
      "current": 1n,
      "modified": false,
    },
    "storage": {
      "slot_0x0000000000000000000000000000000000000000000000000000000000000000": {
        "name": "slot_0x0000000000000000000000000000000000000000000000000000000000000000",
        "trace": [
          {
            "current": {
              "hex": "0x7b",
            },
            "fullExpression": "slot_0x0000000000000000000000000000000000000000000000000000000000000000",
            "modified": true,
            "next": {
              "hex": "0x01c8",
            },
            "note": "Could not label this slot access because no layout was found.",
            "path": [],
            "slots": [
              "0x0000000000000000000000000000000000000000000000000000000000000000",
            ],
          },
        ],
      },
    },
    "storageRoot": {
      "current": "0x56e81f171bcc55a6ff8345e692c0f86e5b48e01b996cadc001622fb5e363b421",
      "modified": false,
    },
    "version": {
      "current": 0,
      "modified": false,
    },
  },
}
`;

exports[`Contract creation > Contract creation from a factory contract > should trace interactions with a created contract 2`] = `
{
  "0x0000000000000000000000000000000000000000": {
    "balance": {
      "current": 1000000000000000000000n,
      "modified": false,
    },
    "code": {
      "current": "0x",
      "modified": false,
    },
    "codeHash": {
      "current": "0x0000000000000000000000000000000000000000000000000000000000000000",
      "modified": false,
    },
    "codeSize": {
      "modified": false,
    },
    "isContract": {
      "current": true,
      "modified": false,
    },
    "isEmpty": {
      "current": false,
      "modified": false,
    },
    "nonce": {
      "current": 0n,
      "modified": false,
    },
    "storage": {},
    "storageRoot": {
      "current": "0x0000000000000000000000000000000000000000000000000000000000000000",
      "modified": false,
    },
    "version": {
      "current": 0,
      "modified": false,
    },
  },
  "0x0000000000000000000000000000000000000001": {
    "balance": {
      "current": 9999999999998736465n,
      "modified": true,
      "next": 9999999999998572154n,
    },
    "code": {
      "current": "0x",
      "modified": false,
    },
    "codeHash": {
      "current": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
      "modified": false,
    },
    "codeSize": {
      "current": 0,
      "modified": false,
    },
    "isContract": {
      "current": false,
      "modified": false,
    },
    "isEmpty": {
      "current": false,
      "modified": false,
    },
    "nonce": {
      "current": 1n,
      "modified": true,
      "next": 2n,
    },
    "storage": {},
    "storageRoot": {
      "current": "0x56e81f171bcc55a6ff8345e692c0f86e5b48e01b996cadc001622fb5e363b421",
      "modified": false,
    },
    "version": {
      "current": 0,
      "modified": false,
    },
  },
  "0x89b0d1b5e6b53a1ba16cf7b6ad34292943671eae": {
    "balance": {
      "current": 0n,
      "modified": false,
    },
    "code": {
      "current": "0x6080604052348015600e575f5ffd5b50600436106030575f3560e01c8063209652551460345780635524107714604e575b5f5ffd5b603a6066565b60405160459190608d565b60405180910390f35b606460048036038101906060919060cd565b606e565b005b5f5f54905090565b805f8190555050565b5f819050919050565b6087816077565b82525050565b5f602082019050609e5f8301846080565b92915050565b5f5ffd5b60af816077565b811460b8575f5ffd5b50565b5f8135905060c78160a8565b92915050565b5f6020828403121560df5760de60a4565b5b5f60ea8482850160bb565b9150509291505056fea26469706673582212209547900619ec1716728eaf2753fab442fe708ca3528bbe22d58874ef6e0f611c64736f6c634300081c0033",
      "modified": false,
    },
    "codeHash": {
      "current": "0x54f15c2d7f40acccc0c76955ae69a95f623cee758dff789b5f94bb1a495b7d89",
      "modified": false,
    },
    "codeSize": {
      "modified": false,
    },
    "isContract": {
      "current": true,
      "modified": false,
    },
    "isEmpty": {
      "current": false,
      "modified": false,
    },
    "nonce": {
      "current": 1n,
      "modified": false,
    },
    "storage": {
      "slot_0x0000000000000000000000000000000000000000000000000000000000000000": {
        "name": "slot_0x0000000000000000000000000000000000000000000000000000000000000000",
        "trace": [
          {
            "current": {
              "hex": "0x7b",
            },
            "fullExpression": "slot_0x0000000000000000000000000000000000000000000000000000000000000000",
            "modified": false,
            "note": "Could not label this slot access because no layout was found.",
            "path": [],
            "slots": [
              "0x0000000000000000000000000000000000000000000000000000000000000000",
            ],
          },
        ],
      },
    },
    "storageRoot": {
      "current": "0x56e81f171bcc55a6ff8345e692c0f86e5b48e01b996cadc001622fb5e363b421",
      "modified": false,
    },
    "version": {
      "current": 0,
      "modified": false,
    },
  },
}
`;
